--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 logging.level.org.springframework=debug
+spring.profiles.active=dev
+
+#trace, debug, info, warning, error, off
+
+currency-service.url=http://default1.in28minutes.com
+currency-service.username=defaultusername
+currency-service.key=defaultkey
